--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -1,22 +1,36 @@
 :root {
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
+  /* COLORS */
+  --color-grey-light: #f0eeee;
+  --color-grey-light-2: #ccc;
 
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
 
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.56);
 
   --color-blue: rgb(31, 147, 242);
-
   --color-orange: orange;
+  --color-transparent: rgba(255, 255, 255, 0.525);
+  --color-nav-transparent: rgba(45, 45, 45, 0.142);
 
-  --section-text-size: 2.7rem;
+  /* FONT SIZES */
+  --section-text-size: 2.5rem;
+
+  /* SECTION MARGIN */
+  --section-margin-block: 15rem;
+
+  /* ELEMENT MARGIN BOTTOM */
+  --heading-margin-bottom: 10rem;
 }
+
+/* MEDIA QUERY BP  */
+$bp-largest: 112.5em; //1800px
+$bp-large: 68.75em; //1200px
+$bp-medium: 61.875em; //990px
+// $bp-small: 50em; //800px or something for a smaller width
+$bp-small: 40.625em; //650px
+$bp-smallest: 25.625em; //410px
 
 *,
 *::after,
@@ -29,22 +43,18 @@
 html {
   font-size: 62.5%; //1rem = 10px;
 
-  // // phone and tab-portrait are the same
-  // @include respond(tab-land) {
-  //   //width < 1200?
-  //   font-size: 56.25%; //1rem = 9px; 9/16 = 56.25%
-  // }
-  // @include respond(tab-portrait) {
-  //   //width < 900?
-  //   font-size: 50%; //1rem = 8px; 8/16 = 50%
-  // }
-  // @include respond(big-desktop) {
-  //   font-size: 75%; //1rem = 12px; 12/16 = 75%
-  // }
+  @media only screen and (min-width: $bp-largest) {
+    font-size: 75%;
+  }
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 56.25%;
+  }
+  @media only screen and (max-width: $bp-small) {
+    font-size: 40.625%;
+  }
 }
 
 body {
   box-sizing: border-box;
-
   font-family: "Montserrat", sans-serif;
 }
