--- a/css/sass/_base.scss
+++ b/css/sass/_base.scss
@@ -30,6 +30,7 @@ $bp-large: 68.75em; //1200px
 $bp-medium: 61.875em; //990px
 // $bp-small: 50em; //800px or something for a smaller width
 $bp-small: 40.625em; //650px
+$bp-smaller: 31.25em; //500px
 $bp-smallest: 25.625em; //410px
 
 *,
