--- a/css/sass/_animation.scss
+++ b/css/sass/_animation.scss
@@ -3,38 +3,42 @@
 }
 
 .luxury-text-animation {
-  animation: movesUp 2s ease-out 2.15s;
+  animation: movesUp 1.1s ease-out 1.35s;
   animation-fill-mode: backwards;
 }
 
 .serenity-text-animation {
-  animation: movesDown 2s ease-out 2.15s;
+  animation: movesDown 1.1s ease-out 1.35s;
   animation-fill-mode: backwards;
 
   @media only screen and (max-width: $bp-small) {
-    animation: movesUp 2s ease-out 2.15s;
+    animation: movesUp 1.1s ease-out 1.35s;
     animation-fill-mode: backwards;
   }
 }
 
 .button-animation {
-  animation: movesUp 2s ease-in 2.1s;
+  animation: movesUp 1.1s ease-in 1.35s;
   animation-fill-mode: backwards;
 }
 
 .movesUp-animation {
-  animation: movesUp 2s ease-in;
+  animation: movesUp 1.1s ease-in;
 }
 
 .zoomIn-animation {
-  animation: zoomIn 2s ease-in 2.1s;
+  animation: zoomIn 1.1s ease-in 1.35s;
   animation-fill-mode: backwards;
 }
 
 .movesDown-animation {
-  animation: movesDown 2s ease-in;
+  animation: movesDown 1.1s ease-in;
 }
 
 .movesInLeft-animation {
-  animation: moveInLeft 2s ease-in-out;
+  animation: moveInLeft 1.1s ease-in-out;
+}
+
+.nav-bg-color {
+  background-color: black;
 }
