--- a/css/sass/_components.scss
+++ b/css/sass/_components.scss
@@ -130,6 +130,20 @@
       box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.25);
     }
   }
+
+  @media only screen and (max-width: $bp-small) {
+    margin: 0;
+    padding: 0;
+
+    &__input {
+      width: 30rem;
+      border-radius: 5px 0 0 5px;
+    }
+
+    &__button {
+      border-radius: 0 5px 5px 0;
+    }
+  }
 }
 
 /* DISCOVER CARDS */
@@ -261,7 +275,6 @@
 
   width: 70vw;
   height: 60rem;
-  margin-top: 5rem;
   padding: 2rem;
 
   &__photo {
@@ -295,6 +308,10 @@
 
   @media only screen and (max-width: $bp-medium) {
     height: 42rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    height: 30rem;
   }
 }
 
@@ -363,12 +380,14 @@
   }
 
   &__group {
+    margin: 1rem;
     & > * {
       margin-bottom: 3rem;
     }
   }
 
   &__destinations {
+    margin: 1rem;
     background-color: #fff;
     border-radius: 0.5rem;
     color: black;
