--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -26,8 +26,145 @@
   @media only screen and (max-width: $bp-medium) {
     height: 80vh;
 
+    &__navigation {
+      border-bottom: none;
+    }
+
+    .nav-search,
+    .navigation__links {
+      display: none;
+    }
+
     &__text-box {
       top: 40%;
+    }
+  }
+}
+
+/* RESPONSIVE HEADER */
+.navigation-main {
+  display: none;
+
+  @media only screen and (max-width: $bp-medium) {
+    display: block;
+    &__checkbox {
+      display: none;
+    }
+
+    &__button {
+      background-color: transparent;
+      height: 7rem;
+      width: 7rem;
+      position: fixed;
+      top: 0.8rem;
+      right: 6rem;
+      border-radius: 50%;
+      z-index: 2000;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    &__background {
+      height: 6rem;
+      width: 6rem;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: transparent;
+      z-index: 1000;
+    }
+    &__nav {
+      height: 100vh;
+      width: 100%;
+      position: fixed;
+      top: 0;
+      right: 0;
+      z-index: 1500;
+      opacity: 0;
+      width: 0;
+
+      &--links {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        width: 80%;
+        transform: translate(-50%, -50%);
+      }
+
+      &--item {
+        font-size: 3rem;
+        font-weight: 300;
+        color: white;
+        display: block;
+        padding-block: 1rem;
+
+        text-decoration: none;
+        text-transform: uppercase;
+        margin: 1rem;
+
+        &:hover {
+          font-weight: bold;
+        }
+      }
+    }
+
+    &__checkbox:checked ~ &__background {
+      height: 100vh;
+      width: 100vw;
+      background-color: black;
+    }
+    &__checkbox:checked ~ &__nav {
+      opacity: 1;
+      width: 100%;
+    }
+
+    &__icon {
+      position: relative;
+      margin-top: 3.5rem;
+
+      &,
+      &::before,
+      &::after {
+        width: 3rem;
+        height: 2px;
+        background-color: white;
+        display: inline-block;
+      }
+
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        transition: all 0.2s;
+      }
+
+      &::before {
+        top: -0.8rem;
+      }
+      &::after {
+        top: 0.8rem;
+      }
+    }
+
+    &__button:hover &__icon::before {
+      top: -1rem;
+    }
+
+    &__button:hover &__icon::after {
+      top: 1rem;
+    }
+
+    &__checkbox:checked + &__button &__icon {
+      background-color: transparent;
+    }
+    &__checkbox:checked + &__button &__icon::before {
+      top: 0;
+      transform: rotate(135deg);
+    }
+    &__checkbox:checked + &__button &__icon::after {
+      top: 0;
+      transform: rotate(-135deg);
     }
   }
 }
@@ -94,7 +231,11 @@ section {
   height: 150rem;
 
   @media only screen and (max-width: $bp-medium) {
-    height: 130rem;
+    height: 120rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    height: 90rem;
   }
 }
 
@@ -107,4 +248,8 @@ section {
   background-color: black;
   color: #fff;
   padding: 4rem;
+
+  @media only screen and (max-width: $bp-smaller) {
+    padding: 1.5rem;
+  }
 }
